force-app/main/default/objects/Plan_Usage_Daily__c/Plan_Usage_Daily__c.object-meta.xml
<CustomObject>
    <description>Per (customer, user, day) turn count + cost counter. Drives the daily-cap rate limit. Key__c is the upsert external id.</description>
    <label>Plan Usage Daily</label>
    <nameField>
        <displayFormat>USAGE-{0000000000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Usage Daily</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>