force-app/main/default/objects/Plan_Usage_Daily__c/fields/Cost_Usd_Micros__c.field-meta.xml
<CustomField>
    <fullName>Cost_Usd_Micros__c</fullName>
    <description>Stored as integer micros to avoid float drift across many small increments. Divide by 1,000,000 to get USD.</description>
    <defaultValue>0</defaultValue>
    <label>Cost USD (micros)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>