force-app/main/default/objects/Plan_Usage_Daily__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>