force-app/main/default/objects/Plan_Usage_Daily__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>UTC day, ISO YYYY-MM-DD.</description>
    <label>Day</label>
    <required>true</required>
    <type>Date</type>
</CustomField>