force-app/main/default/objects/Plan_Usage_Daily__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique upsert key — &lt;customer_id&gt;|&lt;user_id&gt;|&lt;YYYY-MM-DD&gt;. Composed by the Apex memory store on each increment.</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>