force-app/main/default/objects/Plan_Usage_Daily__c/fields/Turn_Count__c.field-meta.xml
<CustomField>
    <fullName>Turn_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Turn Count</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>